Implement base design (#2)
* Implement base design

* Implemnet html

* Modify html

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,428 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./../images/letter-t.png"
+    />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav>
+        <ul>
+          <li>
+            <a href="#home">HOME</a>
+          </li>
+          <li>
+            <a href="#about">ABOUT</a>
+          </li>
+          <li>
+            <a href="#skills">SKILLS</a>
+          </li>
+          <li>
+            <a href="#history">HISTORY</a>
+          </li>
+          <li>
+            <a href="#project">PROJECT</a>
+          </li>
+          <li>
+            <a href="#contact">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
+      <div>
+        <button><i class="fa-solid fa-bars"></i></button>
+      </div>
+    </header>
+    <main>
+      <section class="home">
+        <h1>Building Reliable and Scalable Web Solutions.</h1>
+        <h4>Tamaki Akita, Full stack Engineer</h4>
+        <div>
+          <a href="mailto:tamaki.akita.jp@example.com"
+            ><i class="fa-solid fa-envelope"></i
+          ></a>
+          <a href="https://github.com/tmk-a" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </section>
+      <section class="about">
+        <h3>About Me</h3>
+        <p>
+          I am a former System Engineer with four years of experience in
+          software development. At Fujisoft, I worked on various projects,
+          including insurance management systems, government databases, and
+          digital transformation initiatives. My responsibilities ranged from
+          front-end and back-end development to project management and mentoring
+          junior engineers. <br />Currently, I am participating in a Web
+          Development co-op program in Canada, where I am enhancing my skills
+          through hands-on learning. I am particularly interested in front-end
+          development and database management, building on my previous work
+          experience. <br />With a strong background in software engineering and
+          a passion for continuous learning, I am eager to contribute to
+          innovative web solutions.
+        </p>
+      </section>
+      <section class="skills">
+        <h3>Skills</h3>
+        <ul>
+          <li>
+            <h4>Frontend</h4>
+            <ul>
+              <li>
+                <h5>Languages & Technologies</h5>
+                <ul>
+                  <li>
+                    <i class="fa-brands fa-html5"></i>
+                    <p>HTML</p>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <p>CSS</p>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-js"></i>
+                    <p>JavaScript</p>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <h5>Frameworks & Libraries</h5>
+                <ul>
+                  <li>
+                    <i class="fa-brands fa-react"></i>
+                    <p>React</p>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-vuejs"></i>
+                    <p>Vue.js</p>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <h5>Tools & Methodologies</h5>
+                <ul>
+                  <li><p>Responsive web design principles</p></li>
+                  <li><p>browser developer tools</p></li>
+                  <li><p>debugging and testing techniques</p></li>
+                </ul>
+              </li>
+            </ul>
+            <ul></ul>
+          </li>
+          <li>
+            <h4>Backend</h4>
+            <ul>
+              <li>
+                <h5>Languages</h5>
+                <ul>
+                  <li>
+                    <i class="fa-brands fa-java"></i>
+                    <p>Java</p>
+                  </li>
+                  <li>
+                    <i class="fa-brands fa-python"></i>
+                    <p>Python</p>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <h3>Database</h3>
+                <ul>
+                  <li>
+                    <p>MySQL</p>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-database"></i>
+                    <p>PostgreSQL</p>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <h3>Tools & Methodologies</h3>
+                <ul>
+                  <li><p>Full lifecycle development</p></li>
+                  <li><p>J-Unit</p></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <h4>Others</h4>
+            <ul>
+              <li>
+                <h5>Version Control & Development Tools</h5>
+                <ul>
+                  <li>
+                    <p>Git</p>
+                  </li>
+                  <li>
+                    <p>Agile development</p>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <h5>Automation & Scripting</h5>
+                <ul>
+                  <li>
+                    <i class="fa-solid fa-file-excel"></i>
+                    <p>VBA</p>
+                  </li>
+                  <li>
+                    <image
+                      src="https://img.icons8.com/?size=100&id=39040&format=png&color=000000"
+                      alt="powershell-icon"
+                    ></image>
+                    <p>Windows PowerShell</p>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <h5>System Administration</h5>
+                <ul>
+                  <li>
+                    <image
+                      src="https://img.icons8.com/?size=100&id=101116&format=png&color=000000"
+                      alt="office365-icon"
+                    ></image>
+                    <p>office365</p>
+                  </li>
+                  <li>troubleshooting complex systems</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section class="history">
+        <h3>History</h3>
+        <ul>
+          <li>
+            <h4>2024/10 ~ Present</h4>
+            <h4>Student | FUJISOFT</h4>
+            <div>
+              <ul>
+                <li>learn Modern technology</li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <h4>2024/3 ~ 2024/8</h4>
+            <h4>Fullstack Engineer | FUJISOFT</h4>
+            <div>
+              <ul>
+                <li>
+                  Used low-code tools to develop major portal functionalities
+                  for securely analyzing anonymized medical data.
+                </li>
+                <li>
+                  Successfully managed large-scale updates involving multiple
+                  data sources, delivering results within strict deadlines.
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <h4>2023/10 ~ 2024/4</h4>
+            <h4>Data Processing Engineer| FUJISOFT</h4>
+            <div>
+              <ul>
+                <li>
+                  Created tools to integrate learner IDs across multiple
+                  systems, delivering a critical solution on schedule while
+                  mastering a new programming language.
+                </li>
+                <li>
+                  Conducted AI validation tests to improve data accuracy,
+                  analyzed results, and presented findings in detailed reports.
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <h4>2023/7 ~ 2024/1</h4>
+            <h4>Frontend Engineer | FUJISOFT</h4>
+            <div>
+              <ul>
+                <li>
+                  Developed the "Education DX Service Map," enabling users
+                  (educators, students, and parents) to search for educational
+                  services from private companies. Enhanced front-end usability
+                  with responsive design and user-centered improvements using
+                  React.
+                </li>
+                <li>
+                  Developed front-end components for the system, mastering a new
+                  programming language and contributing to quality deliverables
+                  within a short timeframe.
+                </li>
+                <li>
+                  Proactively assisted team members with bug fixes and
+                  specification changes, enhancing overall project efficiency.
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <h4>2022/11 ~ 2023/6</h4>
+            <h4>Team leader | FUJISOFT</h4>
+            <div>
+              <ul>
+                <li>
+                  Delivered additional front-end functionality as team lead,
+                  meeting tight deadlines and ensuring high quality.
+                </li>
+                <li>
+                  Directed a 5 member team to create test specifications for a
+                  vehicle recall information management system, tracking
+                  progress and ensuring seamless execution.
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <h4>2021/10 ~ 2023/3</h4>
+            <h4>PMO | FUJISOFT</h4>
+            <div>
+              <ul>
+                <li>
+                  Played a pivotal PMO role in an 8 member team, ensuring the
+                  system's timely and successful release.
+                </li>
+                <li>
+                  Spearheaded team management activities, including task
+                  delegation, progress tracking, and mentoring junior engineers.
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <h4>2020/10 ~ 2023/3</h4>
+            <h4>Fullstack Engineer | FUJISOFT</h4>
+            <div>
+              <ul>
+                <li>
+                  Led system design, front-end/back-end development, and testing
+                  (unit, integration, and system) for a national health
+                  insurance member management system, serving over 98,000
+                  members.
+                </li>
+                <li>
+                  Authored comprehensive design documentation and created
+                  detailed specifications for system-generated reports.
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <h4>2020/10 ~ 2023/3</h4>
+            <h4>Student | Meiji university</h4>
+            <div>
+              <ul>
+                <li>Studied Creative Writing and Japanese Literature.</li>
+                <li>Received a prize for a book review.</li>
+                <li>
+                  Awarded a merit-based scholarship in my third year as one of
+                  the top-performing students in my faculty.
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section class="certification">
+        <h3>Certification</h3>
+        <ul>
+          <li>
+            <p>Nov 2022</p>
+            <p>JDLA Deep Learning for GENERAL</p>
+            <p>Japan Deep Learning Association</p>
+          </li>
+          <li>
+            <p>Jun 2022</p>
+            <p>Applied Information Technology Engineer Examination</p>
+            <p>IPA: Information-technology Promotion Agency,Japan</p>
+          </li>
+        </ul>
+      </section>
+      <section class="project"></section>
+      <h3>Project</h3>
+      <ul>
+        <li>
+          <dev>
+            <h4>Portfolio</h4>
+            <p>2025/2</p>
+            <p>Check out!</p>
+            <a href="#" ref="portfolio"
+              ><i class="fa-solid fa-arrow-up-right-from-square"></i
+            ></a>
+          </dev>
+          <img src="" alt="portfolio" />
+        </li>
+      </ul>
+      <section class="contact">
+        <h2>Let’s chat together!</h2>
+        <address>
+          <a href="mailto:tamaki.akita.jp@example.com"
+            ><i class="fa-solid fa-envelope"></i
+          ></a>
+          <a href="https://github.com/tmk-a" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </address>
+      </section>
+    </main>
+    <footer>
+      <nav>
+        <ul>
+          <div>
+            <li>
+              <a href="#home">HOME</a>
+            </li>
+            <li>
+              <a href="#about">ABOUT</a>
+            </li>
+          </div>
+          <div>
+            <li>
+              <a href="#skills">SKILLS</a>
+            </li>
+            <li>
+              <a href="#history">HISTORY</a>
+            </li>
+          </div>
+          <div>
+            <li>
+              <a href="#project">PROJECT</a>
+            </li>
+            <li>
+              <a href="#contact">CONTACT</a>
+            </li>
+          </div>
+        </ul>
+      </nav>
+      <small>copyright notice:xxxxxxxxx</small>
+    </footer>
+  </body>
 </html>
