Implement about-section (#3)

--- a/src/index.html
+++ b/src/index.html
@@ -67,8 +67,8 @@
         </div>
       </section>
       <section class="about">
-        <h3>About Me</h3>
-        <p>
+        <h3 class="about__title">About Me</h3>
+        <p class="about__text">
           I am a former System Engineer with four years of experience in
           software development. At Fujisoft, I worked on various projects,
           including insurance management systems, government databases, and
