Implement header-section (#4)

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
   </head>
   <body>
     <header class="header">
-      <nav>
-        <ul>
+      <nav class="header__nav">
+        <ul class="header__nav-list">
           <li>
             <a href="#home">HOME</a>
           </li>
