Implement home-section (#5)

--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,11 @@
     </header>
     <main>
       <section class="home">
-        <h1>Building Reliable and Scalable Web Solutions.</h1>
+        <h1 class="home__title">
+          Building Reliable and Scalable Web Solutions.
+        </h1>
         <h4>Tamaki Akita, Full stack Engineer</h4>
-        <div>
+        <div class="home__contact">
           <a href="mailto:tamaki.akita.jp@example.com"
             ><i class="fa-solid fa-envelope"></i
           ></a>
