--- a/src/index.html
+++ b/src/index.html
@@ -86,130 +86,153 @@
         </p>
       </section>
       <section class="skills">
-        <h3>Skills</h3>
-        <ul>
-          <li>
+        <h3 class="skills__title">Skills</h3>
+        <ul class="skills__list">
+          <li class="skills__big-category">
             <h4>Frontend</h4>
-            <ul>
+            <ul class="skills__middle-categories">
               <li>
                 <h5>Languages & Technologies</h5>
-                <ul>
-                  <li>
+                <ul class="skills__small-category">
+                  <li class="skills__item-container">
                     <i class="fa-brands fa-html5"></i>
-                    <p>HTML</p>
+                    <p class="skills__item-name">HTML</p>
                   </li>
-                  <li>
+                  <li class="skills__item-container">
                     <i class="fa-brands fa-css3-alt"></i>
-                    <p>CSS</p>
+                    <p class="skills__item-name">CSS</p>
                   </li>
-                  <li>
+                  <li class="skills__item-container">
                     <i class="fa-brands fa-js"></i>
-                    <p>JavaScript</p>
+                    <p class="skills__item-name">JS</p>
                   </li>
                 </ul>
               </li>
               <li>
                 <h5>Frameworks & Libraries</h5>
-                <ul>
-                  <li>
+                <ul class="skills__small-category">
+                  <li class="skills__item-container">
                     <i class="fa-brands fa-react"></i>
-                    <p>React</p>
+                    <p class="skills__item-name">React</p>
                   </li>
-                  <li>
+                  <li class="skills__item-container">
                     <i class="fa-brands fa-vuejs"></i>
-                    <p>Vue.js</p>
+                    <p class="skills__item-name">Vue.js</p>
                   </li>
                 </ul>
               </li>
               <li>
                 <h5>Tools & Methodologies</h5>
-                <ul>
-                  <li><p>Responsive web design principles</p></li>
-                  <li><p>browser developer tools</p></li>
-                  <li><p>debugging and testing techniques</p></li>
+                <ul class="skills__others">
+                  <li class="skills__others-item">
+                    <i class="fa-solid fa-pen-to-square"></i>
+                    <p>Responsive web design principles</p>
+                  </li>
+                  <li class="skills__others-item">
+                    <i class="fa-solid fa-pen-to-square"></i>
+                    <p>browser developer tools</p>
+                  </li>
+                  <li class="skills__others-item">
+                    <i class="fa-solid fa-pen-to-square"></i>
+                    <p>debugging and testing techniques</p>
+                  </li>
                 </ul>
               </li>
             </ul>
             <ul></ul>
           </li>
-          <li>
+          <li class="skills__big-category">
             <h4>Backend</h4>
-            <ul>
+            <ul class="skills__middle-categories">
               <li>
                 <h5>Languages</h5>
-                <ul>
-                  <li>
+                <ul class="skills__small-category">
+                  <li class="skills__item-container">
                     <i class="fa-brands fa-java"></i>
-                    <p>Java</p>
+                    <p class="skills__item-name">Java</p>
                   </li>
-                  <li>
+                  <li class="skills__item-container">
                     <i class="fa-brands fa-python"></i>
-                    <p>Python</p>
+                    <p class="skills__item-name">Python</p>
                   </li>
                 </ul>
               </li>
               <li>
-                <h3>Database</h3>
-                <ul>
-                  <li>
-                    <p>MySQL</p>
-                  </li>
-                  <li>
+                <h5>Database</h5>
+                <ul class="skills__small-category">
+                  <li class="skills__item-container">
                     <i class="fa-solid fa-database"></i>
-                    <p>PostgreSQL</p>
+                    <p class="skills__item-name">MySQL</p>
+                  </li>
+                  <li class="skills__item-container">
+                    <i class="fa-solid fa-database"></i>
+                    <p class="skills__item-name">Postgres</p>
                   </li>
                 </ul>
               </li>
               <li>
-                <h3>Tools & Methodologies</h3>
-                <ul>
-                  <li><p>Full lifecycle development</p></li>
-                  <li><p>J-Unit</p></li>
+                <h5>Tools & Methodologies</h5>
+                <ul class="skills__others">
+                  <li class="skills__others-item">
+                    <i class="fa-solid fa-pen-to-square"></i>
+                    <p>Full lifecycle development</p>
+                  </li>
+                  <li class="skills__others-item">
+                    <i class="fa-solid fa-pen-to-square"></i>
+                    <p>J-Unit</p>
+                  </li>
                 </ul>
               </li>
             </ul>
           </li>
-          <li>
+          <li class="skills__big-category">
             <h4>Others</h4>
-            <ul>
+            <ul class="skills__middle-categories">
               <li>
                 <h5>Version Control & Development Tools</h5>
-                <ul>
-                  <li>
-                    <p>Git</p>
+                <ul class="skills__small-category">
+                  <li class="skills__item-container">
+                    <i class="fa-brands fa-git-alt"></i>
+                    <p class="skills__item-name">Git</p>
                   </li>
-                  <li>
-                    <p>Agile development</p>
+                  <li class="skills__item-container">
+                    <i class="fa-solid fa-arrows-spin"></i>
+                    <p class="skills__item-name">Agile</p>
                   </li>
                 </ul>
               </li>
               <li>
                 <h5>Automation & Scripting</h5>
-                <ul>
-                  <li>
+                <ul class="skills__small-category">
+                  <li class="skills__item-container">
                     <i class="fa-solid fa-file-excel"></i>
-                    <p>VBA</p>
+                    <p class="skills__item-name">VBA</p>
                   </li>
-                  <li>
-                    <image
+                  <li class="skills__item-container">
+                    <img
                       src="https://img.icons8.com/?size=100&id=39040&format=png&color=000000"
                       alt="powershell-icon"
-                    ></image>
-                    <p>Windows PowerShell</p>
+                      class="skills__item-image"
+                    ></img>
+                    <p class="skills__item-name">PowerShell</p>
                   </li>
                 </ul>
               </li>
               <li>
                 <h5>System Administration</h5>
-                <ul>
-                  <li>
+                <ul class="skills__small-category">
+                  <li class="skills__item-container">
                     <image
                       src="https://img.icons8.com/?size=100&id=101116&format=png&color=000000"
                       alt="office365-icon"
+                      class="skills__item-image"
                     ></image>
-                    <p>office365</p>
+                    <p class="skills__item-name">office365</p>
                   </li>
-                  <li>troubleshooting complex systems</li>
+                  <li class="skills__item-container">
+                    <i class="fa-solid fa-gears"></i>
+                    <p class="skills__item-name">trouble<br>shooting</p>
+                  </li>
                 </ul>
               </li>
             </ul>
