Implement history-section (#7)

--- a/src/index.html
+++ b/src/index.html
@@ -240,22 +240,22 @@
         </ul>
       </section>
       <section class="history">
-        <h3>History</h3>
+        <h3 class="history__title">History</h3>
         <ul>
           <li>
-            <h4>2024/10 ~ Present</h4>
-            <h4>Student | FUJISOFT</h4>
-            <div>
-              <ul>
+            <h4 class="history__date">2024/10 ~ Present</h4>
+            <div class="history__contents">
+              <h4>Student | FUJISOFT</h4>
+              <ul class="history__contents-list">
                 <li>learn Modern technology</li>
               </ul>
             </div>
           </li>
           <li>
-            <h4>2024/3 ~ 2024/8</h4>
-            <h4>Fullstack Engineer | FUJISOFT</h4>
-            <div>
-              <ul>
+            <h4 class="history__date">2024/3 ~ 2024/8</h4>
+            <div class="history__contents">
+              <h4>Fullstack Engineer | FUJISOFT</h4>
+              <ul class="history__contents-list">
                 <li>
                   Used low-code tools to develop major portal functionalities
                   for securely analyzing anonymized medical data.
@@ -268,10 +268,10 @@
             </div>
           </li>
           <li>
-            <h4>2023/10 ~ 2024/4</h4>
-            <h4>Data Processing Engineer| FUJISOFT</h4>
-            <div>
-              <ul>
+            <h4 class="history__date">2023/10 ~ 2024/4</h4>
+            <div class="history__contents">
+              <h4>Data Processing Engineer| FUJISOFT</h4>
+              <ul class="history__contents-list">
                 <li>
                   Created tools to integrate learner IDs across multiple
                   systems, delivering a critical solution on schedule while
@@ -285,10 +285,10 @@
             </div>
           </li>
           <li>
-            <h4>2023/7 ~ 2024/1</h4>
-            <h4>Frontend Engineer | FUJISOFT</h4>
-            <div>
-              <ul>
+            <h4 class="history__date">2023/7 ~ 2024/1</h4>
+            <div class="history__contents">
+              <h4>Frontend Engineer | FUJISOFT</h4>
+              <ul class="history__contents-list">
                 <li>
                   Developed the "Education DX Service Map," enabling users
                   (educators, students, and parents) to search for educational
@@ -309,10 +309,10 @@
             </div>
           </li>
           <li>
-            <h4>2022/11 ~ 2023/6</h4>
-            <h4>Team leader | FUJISOFT</h4>
-            <div>
-              <ul>
+            <h4 class="history__date">2022/11 ~ 2023/6</h4>
+            <div class="history__contents">
+              <h4>Team leader | FUJISOFT</h4>
+              <ul class="history__contents-list">
                 <li>
                   Delivered additional front-end functionality as team lead,
                   meeting tight deadlines and ensuring high quality.
@@ -326,10 +326,10 @@
             </div>
           </li>
           <li>
-            <h4>2021/10 ~ 2023/3</h4>
-            <h4>PMO | FUJISOFT</h4>
-            <div>
-              <ul>
+            <h4 class="history__date">2021/10 ~ 2023/3</h4>
+            <div class="history__contents">
+              <h4>PMO | FUJISOFT</h4>
+              <ul class="history__contents-list">
                 <li>
                   Played a pivotal PMO role in an 8 member team, ensuring the
                   system's timely and successful release.
@@ -342,10 +342,10 @@
             </div>
           </li>
           <li>
-            <h4>2020/10 ~ 2023/3</h4>
-            <h4>Fullstack Engineer | FUJISOFT</h4>
-            <div>
-              <ul>
+            <h4 class="history__date">2020/10 ~ 2023/3</h4>
+            <div class="history__contents">
+              <h4>Fullstack Engineer | FUJISOFT</h4>
+              <ul class="history__contents-list">
                 <li>
                   Led system design, front-end/back-end development, and testing
                   (unit, integration, and system) for a national health
@@ -360,10 +360,10 @@
             </div>
           </li>
           <li>
-            <h4>2020/10 ~ 2023/3</h4>
-            <h4>Student | Meiji university</h4>
-            <div>
-              <ul>
+            <h4 class="history__date">2020/10 ~ 2023/3</h4>
+            <div class="history__contents">
+              <h4>Student | Meiji university</h4>
+              <ul class="history__contents-list">
                 <li>Studied Creative Writing and Japanese Literature.</li>
                 <li>Received a prize for a book review.</li>
                 <li>
