Implement certification-section

--- a/src/index.html
+++ b/src/index.html
@@ -376,17 +376,21 @@
         </ul>
       </section>
       <section class="certification">
-        <h3>Certification</h3>
-        <ul>
+        <h3 class="certification__title">Certification</h3>
+        <ul class="certification__list">
           <li>
-            <p>Nov 2022</p>
-            <p>JDLA Deep Learning for GENERAL</p>
-            <p>Japan Deep Learning Association</p>
+            <h4 class="certification__name">JDLA Deep Learning for GENERAL</h4>
+            <div class="certification__contents">
+              <p>2022/11</p>
+              <p>Japan Deep Learning Association</p>
+            </div>
           </li>
           <li>
-            <p>Jun 2022</p>
-            <p>Applied Information Technology Engineer Examination</p>
-            <p>IPA: Information-technology Promotion Agency,Japan</p>
+            <h4 class="certification__name">Applied Information Technology Engineer Examination</h4>
+            <div class="certification__contents">
+              <p>2022/6</p>
+              <p>IPA: Information-technology Promotion Agency,Japan</p>
+           </div>
           </li>
         </ul>
       </section>
