Implement project-section (#8)

--- a/src/index.html
+++ b/src/index.html
@@ -395,18 +395,23 @@
         </ul>
       </section>
       <section class="project"></section>
-      <h3>Project</h3>
+      <h3 class="project__title">Project</h3>
       <ul>
         <li>
-          <dev>
+          <div class="project__name">
             <h4>Portfolio</h4>
-            <p>2025/2</p>
-            <p>Check out!</p>
             <a href="#" ref="portfolio"
-              ><i class="fa-solid fa-arrow-up-right-from-square"></i
+            ><i class="fa-solid fa-arrow-up-right-from-square"></i
             ></a>
-          </dev>
-          <img src="" alt="portfolio" />
+          </div>
+          <div class="project__item">
+            <div class="project__item-text">
+              <p>2025/2</p>
+            </div>
+            <div class="project__image">
+              <img src="./../images/portfolio.png" alt="portfolio"/>
+            </div>
+          </div>
         </li>
       </ul>
       <section class="contact">
