Implement contact-section (#9)

--- a/src/index.html
+++ b/src/index.html
@@ -394,7 +394,7 @@
           </li>
         </ul>
       </section>
-      <section class="project"></section>
+      <section class="project">
       <h3 class="project__title">Project</h3>
       <ul>
         <li>
@@ -414,9 +414,10 @@
           </div>
         </li>
       </ul>
+    </section>
       <section class="contact">
-        <h2>Let’s chat together!</h2>
-        <address>
+        <h2 class="contact__title">Let’s chat together!</h2>
+        <address class="contact__address">
           <a href="mailto:tamaki.akita.jp@example.com"
             ><i class="fa-solid fa-envelope"></i
           ></a>
