--- a/src/index.html
+++ b/src/index.html
@@ -430,10 +430,10 @@
         </address>
       </section>
     </main>
-    <footer>
-      <nav>
-        <ul>
-          <div>
+    <footer class="footer">
+      <nav class="footer__nav">
+        <ul class="footer__items">
+          <div class="footer__items">
             <li>
               <a href="#home">HOME</a>
             </li>
@@ -441,7 +441,7 @@
               <a href="#about">ABOUT</a>
             </li>
           </div>
-          <div>
+          <div class="footer__items">
             <li>
               <a href="#skills">SKILLS</a>
             </li>
@@ -449,7 +449,7 @@
               <a href="#history">HISTORY</a>
             </li>
           </div>
-          <div>
+          <div class="footer__items">
             <li>
               <a href="#project">PROJECT</a>
             </li>
