--- a/src/index.html
+++ b/src/index.html
@@ -50,24 +50,25 @@
         <button><i class="fa-solid fa-bars"></i></button>
       </div>
     </header>
+    <section class="home">
+      <h1 class="home__title">
+        Building Reliable and Scalable Web Solutions.
+      </h1>
+      <h4>Tamaki Akita, Full stack Engineer</h4>
+      <div><img src="./../images/selfphoto.jpg" alt="tamaki" class="home__image"/></div>
+      <div class="home__contact">
+        <a href="mailto:tamaki.akita.jp@example.com"
+          ><i class="fa-solid fa-envelope"></i
+        ></a>
+        <a href="https://github.com/tmk-a" target="_blank"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+      </div>
+    </section>
     <main>
-      <section class="home">
-        <h1 class="home__title">
-          Building Reliable and Scalable Web Solutions.
-        </h1>
-        <h4>Tamaki Akita, Full stack Engineer</h4>
-        <div class="home__contact">
-          <a href="mailto:tamaki.akita.jp@example.com"
-            ><i class="fa-solid fa-envelope"></i
-          ></a>
-          <a href="https://github.com/tmk-a" target="_blank"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-          <a href="https://www.linkedin.com/in/tamaki-akita/" target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-        </div>
-      </section>
       <section class="about">
         <h3 class="about__title">About Me</h3>
         <p class="about__text">
